Made some changes index.html

--- a/index.html
+++ b/index.html
@@ -1,13 +1,52 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>App Support</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f7f9fc;
+      color: #333;
+      margin: 0;
+      padding: 40px;
+      text-align: center;
+    }
+    .container {
+      max-width: 600px;
+      margin: auto;
+      padding: 30px;
+      background-color: #fff;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+    }
+    h1 {
+      color: #2c3e50;
+      margin-bottom: 16px;
+    }
+    p {
+      font-size: 18px;
+      line-height: 1.6;
+    }
+    a {
+      color: #007aff;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
 <body>
-  <h1>Welcome to Our Support Page</h1>
-  <p>If you need help with our app, please contact us at:</p>
-  <p>Email: <a href="mailto:support@example.com">support@example.com</a></p>
-  <p>Or message us on Facebook: <a href="https://facebook.com/yourpage">facebook.com/yourpage</a></p>
+  <div class="container">
+    <h1>Need Help?</h1>
+    <p>We're here to assist you with any issues or questions regarding our app.</p>
+    <p>Please feel free to reach out to our support team via email:</p>
+    <p><a href="mailto:trieutran.help@gmail.com">trieutran.help@gmail.com</a></p>
+    <p>We usually respond within 24 hours.</p>
+    <p>Thank you for using our app!</p>
+  </div>
 </body>
 </html>
